--- a/package.json
+++ b/package.json
@@ -1,5 +1,33 @@
 {
+  "name": "simplesocial",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
   "dependencies": {
-    "appwrite": "^15.0.0"
+    "@headlessui/react": "^2.0.4",
+    "@heroicons/react": "^2.1.3",
+    "appwrite": "^15.0.0",
+    "classnames": "^2.5.1",
+    "next": "14.2.4",
+    "react": "^18",
+    "react-dom": "^18",
+    "tailwindcss": "^3.4.4",
+    "uuid": "^10.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.19",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.4",
+    "postcss": "^8.4.38",
+    "postcss-cli": "^11.0.0",
+    "typescript": "^5"
   }
 }
